fixed paragraf text align

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,7 @@ body {
 p {
     margin: 15px 0;
     line-height: 1.8;
+    text-align: justify
 }
   
 a {
